# graphoracle

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  custom_domains.md  custom_models.md  index.md  quickstart.md
examples/: bring_your_own_domain.py  custom_model_example.py  electric_grid_quickstart.py  supply_chain_demo.py
graphoracle/: __init__.py  oracle.py
graphoracle/benchmarks/: __init__.py  datasets.py  evaluator.py
graphoracle/connectors/: __init__.py  base.py  csv_connector.py  dataframe_connector.py  json_connector.py  synthetic.py
graphoracle/domains/: __init__.py  base.py  electric_grid.py  financial.py  pandemic.py  supply_chain.py  traffic_weather.py
graphoracle/explainability/: __init__.py  attention_viz.py  causal_trace.py  node_importance.py
graphoracle/forecasting/: __init__.py  anomaly.py  cascade.py  engine.py  horizon.py  uncertainty.py
graphoracle/graph/: __init__.py  builder.py  heterogeneous.py  schema.py  temporal.py  validators.py
graphoracle/knowledge/: __init__.py  edge_discovery.py  external_events.py
graphoracle/models/: __init__.py  adaptive_graph.py  base.py  baselines.py  graphoracle_model.py  hgt.py  registry.py  stgnn.py  tgn.py
graphoracle/training/: __init__.py  checkpointing.py  curriculum.py  loss.py  trainer.py
graphoracle/utils/: __init__.py  exceptions.py  io.py  logging.py
tests/: conftest.py  test_benchmarks.py  test_coverage_boost.py  test_custom_models.py  test_domains.py  test_forecasting.py  test_graph.py  test_knowledge_and_io.py  test_models.py
